Fix spacing in table header.

--- a/frontend/quotator/src/app/jobs/jobs.component.scss
+++ b/frontend/quotator/src/app/jobs/jobs.component.scss
@@ -42,7 +42,8 @@
     background-color: lightgray;
   }
 
-  .mat-cell {
+  .mat-cell,
+  .mat-header-cell {
     padding: 0 1rem !important;
   }
 }
