--- a/frontend/quotator/src/app/reports/reports.component.scss
+++ b/frontend/quotator/src/app/reports/reports.component.scss
@@ -46,7 +46,8 @@
     background-color: lightgray;
   }
 
-  .mat-cell {
+  .mat-cell,
+  .mat-header-cell {
     padding: 0 1rem !important;
   }
 }
